# c2pluscal

./: .gitignore  README.md  config_dump.ml  main.ml  module.ml  options.ml  pc.ml  pc_dump.ml  pc_gen.ml  pc_print.ml  pc_utils.ml  test.c
doc/: install.md  limitations.md  overview.md  translation.md  usage.md
doc/html/: index.html
doc/html/frama-c-pluscal/: index.html
doc/html/frama-c-pluscal/Pluscal/: index.html
doc/html/frama-c-pluscal/Pluscal/Config_dump/: index.html
doc/html/frama-c-pluscal/Pluscal/Config_utils/: index.html
doc/html/frama-c-pluscal/Pluscal/Invariants_utils/: index.html
doc/html/frama-c-pluscal/Pluscal/Main/: index.html
doc/html/frama-c-pluscal/Pluscal/Module/: index.html
doc/html/frama-c-pluscal/Pluscal/Options/: index.html
doc/html/frama-c-pluscal/Pluscal/Pc/: index.html
doc/html/frama-c-pluscal/Pluscal/Pc_debug/: index.html
doc/html/frama-c-pluscal/Pluscal/Pc_dump/: index.html
doc/html/frama-c-pluscal/Pluscal/Pc_gen/: index.html
doc/html/frama-c-pluscal/Pluscal/Pc_gen/class-gen_pc/: index.html
doc/html/frama-c-pluscal/Pluscal/Pc_utils/: index.html
src/: config_dump.ml  config_utils.ml  dune  dune-project  invariants_utils.ml  main.ml  module.ml  options.ml  pc.ml  pc_debug.ml  pc_dump.ml  pc_gen.ml  pc_utils.ml
tests/: test.c  test.expect  test_config
tests/basic/: test_array.c  test_bitwise.c  test_enums.c  test_funcs.c  test_global_var.c  test_local_var.c  test_loops.c  test_ptr.c  test_recursivity.c  test_structs.c
tests/basic/oracle/: dune
tests/basic/result/: dune  test_array.0.exec.wtests  test_bitwise.0.exec.wtests  test_enums.0.exec.wtests  test_funcs.0.exec.wtests  test_global_var.0.exec.wtests  test_local_var.0.exec.wtests  test_loops.0.exec.wtests  test_ptr.0.exec.wtests  test_recursivity.0.exec.wtests  test_structs.0.exec.wtests
