(rule (target "test_local_var.err.oracle") (mode fallback) (action (write-file "test_local_var.err.oracle" "")))
(rule (target "test_local_var.res.oracle") (mode fallback) (action (write-file "test_local_var.res.oracle" "")))
(rule (target "test_global_var.err.oracle") (mode fallback) (action (write-file "test_global_var.err.oracle" "")))
(rule (target "test_global_var.res.oracle") (mode fallback) (action (write-file "test_global_var.res.oracle" "")))
(rule (target "test_enums.err.oracle") (mode fallback) (action (write-file "test_enums.err.oracle" "")))
(rule (target "test_enums.res.oracle") (mode fallback) (action (write-file "test_enums.res.oracle" "")))
(rule (target "test_ptr.err.oracle") (mode fallback) (action (write-file "test_ptr.err.oracle" "")))
(rule (target "test_ptr.res.oracle") (mode fallback) (action (write-file "test_ptr.res.oracle" "")))
(rule (target "test_loops.err.oracle") (mode fallback) (action (write-file "test_loops.err.oracle" "")))
(rule (target "test_loops.res.oracle") (mode fallback) (action (write-file "test_loops.res.oracle" "")))
(rule (target "test_funcs.err.oracle") (mode fallback) (action (write-file "test_funcs.err.oracle" "")))
(rule (target "test_funcs.res.oracle") (mode fallback) (action (write-file "test_funcs.res.oracle" "")))
(rule (target "test_recursivity.err.oracle") (mode fallback) (action (write-file "test_recursivity.err.oracle" "")))
(rule (target "test_recursivity.res.oracle") (mode fallback) (action (write-file "test_recursivity.res.oracle" "")))
(rule (target "test_structs.err.oracle") (mode fallback) (action (write-file "test_structs.err.oracle" "")))
(rule (target "test_structs.res.oracle") (mode fallback) (action (write-file "test_structs.res.oracle" "")))
(rule (target "test_array.err.oracle") (mode fallback) (action (write-file "test_array.err.oracle" "")))
(rule (target "test_array.res.oracle") (mode fallback) (action (write-file "test_array.res.oracle" "")))
(rule (target "test_bitwise.err.oracle") (mode fallback) (action (write-file "test_bitwise.err.oracle" "")))
(rule (target "test_bitwise.res.oracle") (mode fallback) (action (write-file "test_bitwise.res.oracle" "")))

