(copy_files ../*.*)
(alias (name ptests)
  (deps (alias ptests_config)))
; TEST FILE "test_local_var.c"
(alias (name "test_local_var.wtests")
  (deps (alias "test_local_var.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "test_local_var.c")
  (deps (alias "test_local_var.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/basic/test_local_var.c
  (alias "test_local_var.0.exec.wtests")
  (targets "test_local_var.err.log" "test_local_var.res.log"  )
  (deps "test_local_var.0.exec.wtests" "../oracle/test_local_var.res.oracle" "../oracle/test_local_var.err.oracle"  "test_local_var.c"  (package frama-c)  (package "frama-c-pluscal") )
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (run frama-c-wtests -brief "test_local_var.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_local_var.c -pluscal  > \"test_local_var.res.log\" 2> \"test_local_var.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "test_local_var.c"
  (alias "test_local_var.0.exec")
  (deps  "test_local_var.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_local_var.c -pluscal ")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "test_local_var.c"
  (alias "test_local_var.0.exec.show")
  (deps  "test_local_var.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_local_var.c -pluscal  > \"test_local_var.res.log\" 2> \"test_local_var.err.log\"'"))
)
(rule
  (alias "test_local_var.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_local_var.res.oracle" "test_local_var.res.log"))
)
(rule
  (alias "test_local_var.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_local_var.err.oracle" "test_local_var.err.log"))
)
(alias (name "test_local_var.diff")
  (deps (alias "test_local_var.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
(alias (name "ptests_config")
  (deps (alias "test_local_var.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
; TEST FILE "test_global_var.c"
(alias (name "test_global_var.wtests")
  (deps (alias "test_global_var.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "test_global_var.c")
  (deps (alias "test_global_var.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/basic/test_global_var.c
  (alias "test_global_var.0.exec.wtests")
  (targets "test_global_var.err.log" "test_global_var.res.log"  )
  (deps "test_global_var.0.exec.wtests" "../oracle/test_global_var.res.oracle" "../oracle/test_global_var.err.oracle"  "test_global_var.c"  (package frama-c)  (package "frama-c-pluscal") )
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (run frama-c-wtests -brief "test_global_var.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_global_var.c -pluscal  > \"test_global_var.res.log\" 2> \"test_global_var.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "test_global_var.c"
  (alias "test_global_var.0.exec")
  (deps  "test_global_var.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_global_var.c -pluscal ")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "test_global_var.c"
  (alias "test_global_var.0.exec.show")
  (deps  "test_global_var.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_global_var.c -pluscal  > \"test_global_var.res.log\" 2> \"test_global_var.err.log\"'"))
)
(rule
  (alias "test_global_var.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_global_var.res.oracle" "test_global_var.res.log"))
)
(rule
  (alias "test_global_var.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_global_var.err.oracle" "test_global_var.err.log"))
)
(alias (name "test_global_var.diff")
  (deps (alias "test_global_var.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
(alias (name "ptests_config")
  (deps (alias "test_global_var.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
; TEST FILE "test_enums.c"
(alias (name "test_enums.wtests")
  (deps (alias "test_enums.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "test_enums.c")
  (deps (alias "test_enums.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/basic/test_enums.c
  (alias "test_enums.0.exec.wtests")
  (targets "test_enums.err.log" "test_enums.res.log"  )
  (deps "test_enums.0.exec.wtests" "../oracle/test_enums.res.oracle" "../oracle/test_enums.err.oracle"  "test_enums.c"  (package frama-c)  (package "frama-c-pluscal") )
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (run frama-c-wtests -brief "test_enums.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_enums.c -pluscal  > \"test_enums.res.log\" 2> \"test_enums.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "test_enums.c"
  (alias "test_enums.0.exec")
  (deps  "test_enums.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_enums.c -pluscal ")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "test_enums.c"
  (alias "test_enums.0.exec.show")
  (deps  "test_enums.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_enums.c -pluscal  > \"test_enums.res.log\" 2> \"test_enums.err.log\"'"))
)
(rule
  (alias "test_enums.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_enums.res.oracle" "test_enums.res.log"))
)
(rule
  (alias "test_enums.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_enums.err.oracle" "test_enums.err.log"))
)
(alias (name "test_enums.diff")
  (deps (alias "test_enums.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
(alias (name "ptests_config")
  (deps (alias "test_enums.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
; TEST FILE "test_ptr.c"
(alias (name "test_ptr.wtests")
  (deps (alias "test_ptr.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "test_ptr.c")
  (deps (alias "test_ptr.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/basic/test_ptr.c
  (alias "test_ptr.0.exec.wtests")
  (targets "test_ptr.err.log" "test_ptr.res.log"  )
  (deps "test_ptr.0.exec.wtests" "../oracle/test_ptr.res.oracle" "../oracle/test_ptr.err.oracle"  "test_ptr.c"  (package frama-c)  (package "frama-c-pluscal") )
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (run frama-c-wtests -brief "test_ptr.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_ptr.c -pluscal  > \"test_ptr.res.log\" 2> \"test_ptr.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "test_ptr.c"
  (alias "test_ptr.0.exec")
  (deps  "test_ptr.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_ptr.c -pluscal ")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "test_ptr.c"
  (alias "test_ptr.0.exec.show")
  (deps  "test_ptr.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_ptr.c -pluscal  > \"test_ptr.res.log\" 2> \"test_ptr.err.log\"'"))
)
(rule
  (alias "test_ptr.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_ptr.res.oracle" "test_ptr.res.log"))
)
(rule
  (alias "test_ptr.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_ptr.err.oracle" "test_ptr.err.log"))
)
(alias (name "test_ptr.diff")
  (deps (alias "test_ptr.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
(alias (name "ptests_config")
  (deps (alias "test_ptr.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
; TEST FILE "test_loops.c"
(alias (name "test_loops.wtests")
  (deps (alias "test_loops.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "test_loops.c")
  (deps (alias "test_loops.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/basic/test_loops.c
  (alias "test_loops.0.exec.wtests")
  (targets "test_loops.err.log" "test_loops.res.log"  )
  (deps "test_loops.0.exec.wtests" "../oracle/test_loops.res.oracle" "../oracle/test_loops.err.oracle"  "test_loops.c"  (package frama-c)  (package "frama-c-pluscal") )
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (run frama-c-wtests -brief "test_loops.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_loops.c -pluscal  > \"test_loops.res.log\" 2> \"test_loops.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "test_loops.c"
  (alias "test_loops.0.exec")
  (deps  "test_loops.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_loops.c -pluscal ")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "test_loops.c"
  (alias "test_loops.0.exec.show")
  (deps  "test_loops.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_loops.c -pluscal  > \"test_loops.res.log\" 2> \"test_loops.err.log\"'"))
)
(rule
  (alias "test_loops.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_loops.res.oracle" "test_loops.res.log"))
)
(rule
  (alias "test_loops.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_loops.err.oracle" "test_loops.err.log"))
)
(alias (name "test_loops.diff")
  (deps (alias "test_loops.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
(alias (name "ptests_config")
  (deps (alias "test_loops.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
; TEST FILE "test_funcs.c"
(alias (name "test_funcs.wtests")
  (deps (alias "test_funcs.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "test_funcs.c")
  (deps (alias "test_funcs.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/basic/test_funcs.c
  (alias "test_funcs.0.exec.wtests")
  (targets "test_funcs.err.log" "test_funcs.res.log"  )
  (deps "test_funcs.0.exec.wtests" "../oracle/test_funcs.res.oracle" "../oracle/test_funcs.err.oracle"  "test_funcs.c"  (package frama-c)  )
  (enabled_if (and true))
(action (run frama-c-wtests -brief "test_funcs.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\"     test_funcs.c > \"test_funcs.res.log\" 2> \"test_funcs.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "test_funcs.c"
  (alias "test_funcs.0.exec")
  (deps  "test_funcs.c"  (package frama-c)   (universe))
  (enabled_if (and true))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\"     test_funcs.c")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "test_funcs.c"
  (alias "test_funcs.0.exec.show")
  (deps  "test_funcs.c"  (package frama-c)   (universe))
  (enabled_if (and true))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\"     test_funcs.c > \"test_funcs.res.log\" 2> \"test_funcs.err.log\"'"))
)
(rule
  (alias "test_funcs.0.exec.diff")
  (enabled_if (and true))
(action (diff "../oracle/test_funcs.res.oracle" "test_funcs.res.log"))
)
(rule
  (alias "test_funcs.0.exec.diff")
  (enabled_if (and true))
(action (diff "../oracle/test_funcs.err.oracle" "test_funcs.err.log"))
)
(alias (name "test_funcs.diff")
  (deps (alias "test_funcs.0.exec.diff"))
  (enabled_if (and true))
)
(alias (name "ptests_config")
  (deps (alias "test_funcs.diff"))
  (enabled_if (and true))
)
; TEST FILE "test_recursivity.c"
(alias (name "test_recursivity.wtests")
  (deps (alias "test_recursivity.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "test_recursivity.c")
  (deps (alias "test_recursivity.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/basic/test_recursivity.c
  (alias "test_recursivity.0.exec.wtests")
  (targets "test_recursivity.err.log" "test_recursivity.res.log"  )
  (deps "test_recursivity.0.exec.wtests" "../oracle/test_recursivity.res.oracle" "../oracle/test_recursivity.err.oracle"  "test_recursivity.c"  (package frama-c)  (package "frama-c-pluscal") )
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (run frama-c-wtests -brief "test_recursivity.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_recursivity.c -pluscal  > \"test_recursivity.res.log\" 2> \"test_recursivity.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "test_recursivity.c"
  (alias "test_recursivity.0.exec")
  (deps  "test_recursivity.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_recursivity.c -pluscal ")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "test_recursivity.c"
  (alias "test_recursivity.0.exec.show")
  (deps  "test_recursivity.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_recursivity.c -pluscal  > \"test_recursivity.res.log\" 2> \"test_recursivity.err.log\"'"))
)
(rule
  (alias "test_recursivity.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_recursivity.res.oracle" "test_recursivity.res.log"))
)
(rule
  (alias "test_recursivity.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_recursivity.err.oracle" "test_recursivity.err.log"))
)
(alias (name "test_recursivity.diff")
  (deps (alias "test_recursivity.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
(alias (name "ptests_config")
  (deps (alias "test_recursivity.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
; TEST FILE "test_structs.c"
(alias (name "test_structs.wtests")
  (deps (alias "test_structs.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "test_structs.c")
  (deps (alias "test_structs.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/basic/test_structs.c
  (alias "test_structs.0.exec.wtests")
  (targets "test_structs.err.log" "test_structs.res.log"  )
  (deps "test_structs.0.exec.wtests" "../oracle/test_structs.res.oracle" "../oracle/test_structs.err.oracle"  "test_structs.c"  (package frama-c)  (package "frama-c-pluscal") )
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (run frama-c-wtests -brief "test_structs.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_structs.c -pluscal  > \"test_structs.res.log\" 2> \"test_structs.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "test_structs.c"
  (alias "test_structs.0.exec")
  (deps  "test_structs.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_structs.c -pluscal ")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "test_structs.c"
  (alias "test_structs.0.exec.show")
  (deps  "test_structs.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_structs.c -pluscal  > \"test_structs.res.log\" 2> \"test_structs.err.log\"'"))
)
(rule
  (alias "test_structs.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_structs.res.oracle" "test_structs.res.log"))
)
(rule
  (alias "test_structs.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_structs.err.oracle" "test_structs.err.log"))
)
(alias (name "test_structs.diff")
  (deps (alias "test_structs.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
(alias (name "ptests_config")
  (deps (alias "test_structs.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
; TEST FILE "test_array.c"
(alias (name "test_array.wtests")
  (deps (alias "test_array.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "test_array.c")
  (deps (alias "test_array.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/basic/test_array.c
  (alias "test_array.0.exec.wtests")
  (targets "test_array.err.log" "test_array.res.log"  )
  (deps "test_array.0.exec.wtests" "../oracle/test_array.res.oracle" "../oracle/test_array.err.oracle"  "test_array.c"  (package frama-c)  (package "frama-c-pluscal") )
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (run frama-c-wtests -brief "test_array.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_array.c -pluscal  > \"test_array.res.log\" 2> \"test_array.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "test_array.c"
  (alias "test_array.0.exec")
  (deps  "test_array.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_array.c -pluscal ")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "test_array.c"
  (alias "test_array.0.exec.show")
  (deps  "test_array.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_array.c -pluscal  > \"test_array.res.log\" 2> \"test_array.err.log\"'"))
)
(rule
  (alias "test_array.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_array.res.oracle" "test_array.res.log"))
)
(rule
  (alias "test_array.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_array.err.oracle" "test_array.err.log"))
)
(alias (name "test_array.diff")
  (deps (alias "test_array.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
(alias (name "ptests_config")
  (deps (alias "test_array.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
; TEST FILE "test_bitwise.c"
(alias (name "test_bitwise.wtests")
  (deps (alias "test_bitwise.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "test_bitwise.c")
  (deps (alias "test_bitwise.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/basic/test_bitwise.c
  (alias "test_bitwise.0.exec.wtests")
  (targets "test_bitwise.err.log" "test_bitwise.res.log"  )
  (deps "test_bitwise.0.exec.wtests" "../oracle/test_bitwise.res.oracle" "../oracle/test_bitwise.err.oracle"  "test_bitwise.c"  (package frama-c)  (package "frama-c-pluscal") )
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (run frama-c-wtests -brief "test_bitwise.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_bitwise.c -pluscal  > \"test_bitwise.res.log\" 2> \"test_bitwise.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "test_bitwise.c"
  (alias "test_bitwise.0.exec")
  (deps  "test_bitwise.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_bitwise.c -pluscal ")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "test_bitwise.c"
  (alias "test_bitwise.0.exec.show")
  (deps  "test_bitwise.c"  (package frama-c)  (package "frama-c-pluscal")  (universe))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/amira/dev/c2pluscal/_build/default:.\" -load-plugin=pluscal    test_bitwise.c -pluscal  > \"test_bitwise.res.log\" 2> \"test_bitwise.err.log\"'"))
)
(rule
  (alias "test_bitwise.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_bitwise.res.oracle" "test_bitwise.res.log"))
)
(rule
  (alias "test_bitwise.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
(action (diff "../oracle/test_bitwise.err.oracle" "test_bitwise.err.log"))
)
(alias (name "test_bitwise.diff")
  (deps (alias "test_bitwise.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
(alias (name "ptests_config")
  (deps (alias "test_bitwise.diff"))
  (enabled_if (and true %{lib-available:frama-c-pluscal.core}))
)
(alias (name disabled_ptests)
  (deps (alias disabled_ptests_config)))
(alias (name ptests)
  (deps (alias disabled_ptests)))
(alias (name ptests_config)
  (deps (alias disabled_ptests_config)))
(rule ; Warns when some test conditions are disabled
  (alias disabled_ptests_config)
  (deps (universe))
  (enabled_if (or false  (not %{lib-available:frama-c-pluscal.core})))
  (action (progn (echo "WARNING: Enabling conditions of some tests are false for @tests/basic/ptests_config\n")
                 (echo "- \%{lib-available:frama-c-pluscal.core}: " %{lib-available:frama-c-pluscal.core} "\n")
  ))
)

